@startuml
interface IRVBankDirectory {
    PboEntries : ObservableCollection<IRVBankEntry> <<get>>
}
class RVBankDirectory {
    - <<readonly>> pboEntries : ObservableCollection<IRVBankEntry>
    + PboEntries : ObservableCollection<IRVBankEntry> <<get>> <<init>>
    + <<override>> EntryMime : RVBankEntryMime <<get>> <<set>>
    + <<override>> OriginalSize : int <<get>> <<set>>
    + <<override>> TimeStamp : int <<get>> <<set>>
    + <<override>> Offset : int <<get>> <<set>>
    + <<override>> DataSize : int <<get>> <<set>>
    + RVBankDirectory(name:string, entries:IEnumerable<IRVBankEntry>, file:IRVBank, parent:IRVBankDirectory, logger:ILogger?)
    + <<override>> Validate(options:RVBankOptions) : Result
    + <<override>> Debinarize(reader:BisBinaryReader, options:RVBankOptions) : Result
    + <<override>> Binarize(writer:BisBinaryWriter, options:RVBankOptions) : Result
}
IRVBankEntry <|-- IRVBankDirectory
RVBankEntry <|-- RVBankDirectory
IRVBankDirectory <|-- RVBankDirectory
@enduml
